--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/web-link": "7.1.*",
         "symfony/yaml": "7.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "xeroapi/xero-php-oauth2": "^5.0"
     },
     "config": {
         "allow-plugins": {
